--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   http: ^1.4.0
   flutter_bloc: ^9.1.1
   get: ^4.7.2
+  sqflite: ^2.4.2
+  path_provider: ^2.1.5
+  sqflite_common_ffi: ^2.3.0
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
